--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e7986">  <td>21/09/19 13:00:46</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:sample.test.LoginTest@3ffc5af1]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="7e7986">  <td>21/09/20 11:44:16</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:sample.test.LoginTest@3ffc5af1]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@117244645</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>21/09/19 13:00:45</td>   <td>-384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginPageLogo()[pri:0, instance:sample.test.LoginTest@3ffc5af1]">loginPageLogo</td> 
+<tr bgcolor="7e7986">  <td>21/09/20 11:44:14</td>   <td>-2327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.enterLoginCredAndSubmit()[pri:1, instance:sample.test.LoginTest@3ffc5af1]">enterLoginCredAndSubmit</td> 
   <td>main@117244645</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>21/09/19 13:00:13</td>   <td>-32430</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.openBrowserAndQCURL()[pri:0, instance:sample.test.LoginTest@3ffc5af1]">&gt;&gt;openBrowserAndQCURL</td> 
+<tr bgcolor="7e7986">  <td>21/09/20 11:44:13</td>   <td>-2978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginPageLogo()[pri:0, instance:sample.test.LoginTest@3ffc5af1]">loginPageLogo</td> 
+  <td>main@117244645</td>   <td></td> </tr>
+<tr bgcolor="7e7986">  <td>21/09/20 11:43:29</td>   <td>-47910</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.openBrowserAndQCURL()[pri:0, instance:sample.test.LoginTest@3ffc5af1]">&gt;&gt;openBrowserAndQCURL</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@117244645</td>   <td></td> </tr>
 </table>
